# godwoken-scripts

contracts/gw-utils/: Cargo.toml
tests/: Cargo.toml
tests/src/script_tests/l2_scripts/: examples.rs  mod.rs
tests/src/script_tests/state_validator/: enter_challenge.rs
tests/src/script_tests/state_validator/cancel_challenge/: mod.rs  tx_execution.rs
